# hrs_server

./: .env  .gitignore  Cargo.toml  README.md  hrs_app.service  rustfmt.toml
.github/workflows/: rust.yml
config/: base.toml  dev.toml  prod.toml
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/i18n/tests/: macro_test.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: macro_test.rs
crates/proc_macro/: Cargo.toml
crates/proc_macro/src/: i18n.rs  lib.rs
locales/common/: cn.json
migrations/: 20231211033336_create_table.sql  20231218080518_add_base.sql  20240219070030_batch.sql
script/: init.rs  print_test.rs
src/: configuration.rs  helpers.rs  lib.rs  main.rs  response.rs  startup.rs  validator.rs
src/middlewares/: auth.rs
src/routes/: home.rs  mod.rs
src/routes/api/: mod.rs  permission.rs  user.rs
tests/: api.rs  health_check.rs  login.rs  permissions.rs  user.rs
tests/helpers/: mod.rs
