[package]
name = "hrs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate", ] }

[workspace]
resolver = "2"
members = [
    "crates/macro",
    "crates/proc_macro",
]

[workspace.dependencies]
serde = { version = "1" }
serde_json = "1"
