[package]
name = "hrs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
once_cell = {workspace = true }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
axum-extra = {version = "0.9", features = ["cookie", "cookie-private"]}
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate", ] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = {version = "0.13", default-features = false, features = ["toml"]}
cookie = "0.18"
jsonwebtoken = "9"
time = "0.3"
regex-lite = "0.1.5"

[workspace]
resolver = "2"
members = [
    "crates/i18n",
]

[workspace.dependencies]
serde = { version = "1" }
serde_json = "1"
once_cell = "1"
anyhow = "1"
